@@ -4,11 +4,11 @@
     <relativePath>../pom.xml</relativePath>
     <groupId>org.codehaus.groovy.eclipse</groupId>
     <artifactId>org.codehaus.groovy.eclipse.ide-test.parent</artifactId>
-    <version>2.9.2-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
   <groupId>org.codehaus.groovy.eclipse</groupId>
   <artifactId>org.codehaus.groovy.alltests</artifactId>
-  <version>2.9.2-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <packaging>eclipse-test-plugin</packaging>
 
   <build>
@@ -24,7 +24,7 @@
         -->
 
         <configuration>
-          <argLine>-Xmx1G -XX:MaxPermSize=256M -XX:-OmitStackTraceInFastThrow</argLine>
+          <argLine>-Xmx1G -XX:-OmitStackTraceInFastThrow</argLine>
           <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
           <showEclipseLog>true</showEclipseLog>
           <testFailureIgnore>true</testFailureIgnore>
